@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wolvereness.physicalshop</groupId>
     <artifactId>PhysicalShop</artifactId>
-    <version>9.0.2</version>
+    <version>9.0.3</version>
     <name>PhysicalShop</name>
     <repositories>
         <repository>
