@@ -1,3 +1,5 @@
+(2/15/12) - v9.0.3 - more break fixes
+- Fixed: fixed all the events that should be able to destroy a shop
 (2/15/12) - v9.0.2 - fix from AgentME
 - Fixed: Enderman can no longer break shops if shop protection is active
 - Fixed: Pistons can no longer break shops if shop protection is active
